# SoftwareDesignLab8

./: .clang-format  CMakeLists.txt  EventsStatistic.cpp  EventsStatistic.hpp  README.md
Tests/: CMakeLists.txt  tests.cpp
include/: Clock.hpp  EventsStatistic.hpp
src/: Clock.cpp  EventsStatistic.cpp  main.cpp
